@@ -1,6 +1,7 @@
 reflect-diagn (1.3) ; urgency=low
 
   * Default books list is set to 75 books
+  * Saving separate start duration
 
  -- Alexey Fedoseev <aleksey@fedoseev.net>  Wed, 29 Dec 2012 16:00:00 +0400
 
